@@ -30,6 +30,8 @@ BUG FIXES:
 +Fix search in directory crash on windows when accessing it from filebrowser.
 +Files with embedded NUL bytes can now be loaded properly.
 +Properly handle filenames that have spaces in them in the Launch plugin.
++Fix saving of files where pasted in text would cause the encoding of the text
+ to fail on write to disk.
 
 #-----------------------------------------------------------------------------#
 
